@@ -13,18 +13,39 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>MyProducts</name>
     <description>MyProducts</description>
+    <url/>
+    <licenses>
+        <license/>
+    </licenses>
+    <developers>
+        <developer/>
+    </developers>
+    <scm>
+        <connection/>
+        <developerConnection/>
+        <tag/>
+        <url/>
+    </scm>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- Thymeleaf -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <!-- Spring Boot DevTools (Optional for Hot Reload) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -43,42 +64,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
-            <!-- JPackage Plugin Configuration -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <executable>jpackage</executable>
-                    <arguments>
-                        <argument>--name</argument>
-                        <argument>MyProducts</argument>
-                        <argument>--input</argument>
-                        <argument>${project.build.directory}</argument>
-                        <argument>--main-jar</argument>
-                        <argument>${project.artifactId}-${project.version}.jar</argument>
-                        <argument>--main-class</argument>
-                        <argument>com.sederikko.MyProductsApplication</argument> <!-- Change this to your main class -->
-                        <argument>--type</argument>
-                        <argument>exe</argument>
-                        <argument>--jlink-options</argument>
-                        <argument>--add-modules</argument>
-                        <argument>java.base</argument>
-                        <argument>--runtime-image</argument>
-                        <argument>${project.build.directory}/jre</argument>
-                        <argument>--icon</argument>
-                        <argument>src/main/resources/static/logo.png</argument> <!-- Path to your icon -->
-                    </arguments>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
+
 </project>
